<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ST TOEFL Quiz</string>
    <string name="rule_listening">
        in this section of the test, you will have an opportunity to demonstrate your ability to understand conversations and talks in English.
        There are three parts to this section.
        Answer all the questions on the basis of what is stated or implied by the speakers you hear.
        Do not take notes or write in your test book at any time.
        On this online apps, you only granted choose one answer and cannot be replaced.
    </string>
    <string name="ruletimelistening">Time-approximately 35 minutes (including the reading of the directions for each part)</string>
    <string name="direction_partA">
        In Part A you will hear short conversations between two people.
        After each conversation, you will hear a question about the conversation.
        The conversations and the questions will not be REPEATED!.
        After you hear the question, read the four possible answers in your test book and choose the best answer.
        Then, on your answer sheet, find the number of th question and fill in the space that corresponds to the letter of the answer you have chosen.
        On this online apps, you only granted choose one answer and cannot be replaced.
    </string>
    <string name="direction_partB">
        In Part B of the test, you will hear longer conversations.
        After each conversation, you will hear several questions.
        The conversations and the questions will not be REPEATED!.
        After you hear the question, read the four possible answers in your test book and choose the best answer.
        Then, on your answer sheet, find the number of th question and fill in the space that corresponds to the letter of the answer you have chosen.
        Remember, you are NOT allowed to take notes or write in your test book. On this online apps, you only granted choose one answer and cannot be replaced.

    </string>
    <string name="direction_partC">
        In Part C, you will hear several talks. After each talk, you will hear some questions.
        The talks and the questions will not be REPEATED!.
        After you hear the question, read the four possible answers in your test book and choose the best answer.
        Then, on your answer sheet, find the number of th question and fill in the space that corresponds to the letter of the answer you have chosen.
        Remember, you are NOT allowed to take notes or write in your test book. On this online apps, you only granted choose one answer and cannot be replaced.

    </string>
    <string name="rule_structure">
        in this section of the test, you will have an opportunity to demonstrate your ability to understand structural text in English.
        There are two parts to this section.
        Answer all the questions on the basis of what is stated or implied by the text.
        Do not take notes or write in your test book at any time.
        Remember, On this online apps, you only granted choose one answer and cannot be replaced.
    </string>
    <string name="ruletimestructure">
        Time-approximately 25 minutes (including the reading of the directions for each part)
    </string>
    <string name="structure_direction_partA" tools:ignore="TypographyOther">
        In Part A, he questions 1-15 are incomplete sentences.
        Beneath each sentence you will see four word or phrases, marked (A),(B),(C), and (D) on your answer choice.
        Choose one word or pharase that best completes the sentence.
        Then, on your answer sheet, find the number of the question and choose in the letter of answer you have chosen.
        Remember, On this online apps, you only granted choose one answer and cannot be replaced.
    </string>
    <string name="structure_direction_partB" tools:ignore="TypographyOther">
    In Part B, question 16-40, each sentence has four underlined parts of the sentence are marked (A),(B),(C),(D).
    Identify the one underlined word or phrase that must be changed in order for the sentence to be correct.
    Then, on your answer sheet, find the number of the question and choose in the letter of answer you have chosen.
    Remember, On this online apps, you only granted choose one answer and cannot be replaced.
    </string>
    <string name="rule_reading">
        in this section is designed to measure your ability to read and understand short passages.
        Answer all the questions on the basis of what is stated or implied by the text.
        Do not take notes or write in your test book at any time.
        Remember, On this online apps, you only granted choose one answer and cannot be replaced.
    </string>
    <string name="ruletimereading">
        Time-approximately 55 minutes (including the reading of the directions for each part)
    </string>
    <string name="reading_direction" tools:ignore="TypographyOther">
        In this section you will read several passages. Each one is followed by a number of question about it.
        For questions 1-50, you are to chose one best answer (A),(B),(C), and (D) to each question.
        Then, on your answer sheet, find the number of the question and fill in the space that corresponds to the letter of the answer you have chosen.
        Answer all questions about the information in a passage on the basis of what is stated or implied in that passage.
        Remember, On this online apps, you only granted choose one answer and cannot be replaced.
    </string>
    <string name="tata_cara_app_1">Jawaban Hanya satu kali klik, kerjakan yang mudah terlebih dahulu dan waspadalah terhadap kejadian salah klik.</string>
    <string name="about">
        Smart Tirtayasa TOEFL Quiz (ST TOEFL Quiz) adalah aplikasi Kuis TOEFL berbasis android yang dikembangkan oleh dua mahasiswa Angkatan 2018 Jurusan Teknik Elektro FT Untirta bernama Galih Aji Pambudi dan Dimas Emeraldo As-Sidiqy.
        Aplikasi ini dibuat sebagai hasil dari program Kerja Praktek yang dilakukan pada Lab Research Computer Network and Technology dan Bekerja sama dengan Language Development Center dalam pembuatannya.
        ST TOEFL Quiz sudah terintegrasi internet dengan memanfaatkan Fitur Firebase Authentification dan Firebase Database sehingga proses perhitungan input nilai sudah otomatis.
        Aplikasi ini masih merupakan prototype yang mana kekurangannya masihlah banyak, sehingga harapannya project ini dapat dikembangkan ke tahap yang lebih tinggi dengan anggota tim yang lebih banyak.


    </string>
    <string name="Blank">

    </string>
    <string name="deskripsi">
        Robert Moog was an American inventor who developed the Moog Synthesizer. was one of the first synthesizers to gain widespread use as a musical instrument. Moog’s synthesizers were an important pa Line of musical innovation in rock and jazz music in the 1960s and 1970s. Robert Arthur Moog was born in Queens, a borough of New York City 75 years ago. He became fascinated with electronics as a teenager, particularly an early electronic music instrument called the theremin. Moog studied physic and electrical engineering at Queens College and Columbia University, both in New York City and later received a Ph.D. in engineering physic Cornel University in Ithaca, New York. In 1954, while still an undergraduate student, Moog formed his own company to sell theremins and theremin kits.
    </string>
    <string name="Passage1">
        Reading Comprehension Passage 1 for question number 1-10
    </string>
    <string name="Passage1Text1">
        The largest of the five Great Lakes of North Amerika is Lake Superior. It is <b><i>situated</i></b> on the northern edge of Wisconsin and stretches between the Upper Penisula og Michigan north to Ontario Canada, and spans west
        to the eastern edge of Minnesota. The lake stretches appoximately 350 miles from west to east, and 160 miles north to south, with a shoreline almost 2800 miles long. That is the same distance as travling
        from Duluth Minnesota to Miami Florida.
    </string>
    <string name="Passage5">
        Reading Comprehension Passage 5 for question number 41-50
            </string>
    <string name="Passage5Text1">
        One of the notable author American Literature is Ernest Miller Hemingway. He was born on July 21, 1899, in Oak Park, Illinois, a suburb of Chicago. His father Clarence Edmonds Hemingway was a physician,
        and his mother, Grace Hall-Hemingway, was a musician. Both were well-educated and well-respected in the conservative community of Oak Park. His parents, Clarence and Grace Hemingway, married in 1896.
        Hemingway claimed to dislike his name, which he "associated with the naive, even foolish hero of Oscar Wilde\'s play The Importance of Being Earnest".
    </string>
    <string name="Passage5Text2">
        Hemingway <b><i>attended</i></b> Oak Park and River Forest High School from 1913 until 1917. He took part in a number of sports-boxing, track and field, water polo, and football and had good grades in English classes.
        Hemingway wrote for and edited the Trapeze and Tabula (the school\'s newspaper and yearbook), for which he imitated the language of sportswriters, and used the pen name Ring Larder, Jr.
            </string>
    <string name="Passage5Text3">
        On graduation from high school in 1917, Hemingway became a reporter for the Kansas City Star. Soon after that, he became a novelist.
        It was the Sar\'s style guide that became the foundation of his writing: "Use short sentences. Use short first paragraphs. Use vigorous English. Be positive, not negative.\" During World War I, Hemingway served as an ambulance driver for the American Red Cross.\"
    </string>
    <string name="Passage5Text4">
        He wrote most of his work between the mid-1920s and the mid-1950s. He won the Pulitzer Prize for his short novel The Old Man And The Sea in 1952.
        Hemingway was awarded the Nobel Prize for Literature in 1954. Hemingway\'s fiction was successful because the characters in his works exhibited authenticity that resonated with his audience.
        Many of his works are classics of American literature. He published seven novels, six short story collections, and two non-fiction works during his lifetime; a further three novels, four collections of
        short stories, and three non-fiction works published <b><i>posthumously</i></b>.
    </string>
    <string name="Passage5Text5">
        He divorced Hadley Richardson in 1927, and then married Pauline Pfeiffer. They divorced following Hemingway\'s return from covering the Spanish Civil War, after which he wrote For Whom the Bell Tolls.
        Hemingway married his third wife Martha Gellhorn in 1940, but he left her for Mary Welsh Hemingway after World War II
    </string>
    <string name="Passage5Text6">
        Shortly after the publication of The Old Man and the Sea in 1952 Hemingway went on safari to Africa, where he was almost killed in a plane crash that left him in pain or ill-health for much of the rest of his life.
        Hemingway lived permanently in Key West, Florida, and Cuba during the 1930s and 1940s, but in 1959 he moved from Cuba to Ketchum, Idaho, where he committed suicide in the summer of 1961.
         </string>
</resources>